--- a/DexSampleApp/View/User/UserTableViewCell.xib
+++ b/DexSampleApp/View/User/UserTableViewCell.xib
@@ -11,14 +11,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserTableViewCell" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="DexSampleApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserTableViewCell" rowHeight="146" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="DexSampleApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="146"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="145.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="GnQ-tc-1iO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="145.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1mF-bo-e7J">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <connections>
+                            <outlet property="dataSource" destination="KGk-i7-Jjw" id="fqH-5v-Ucb"/>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="d8C-uH-tx4"/>
+                        </connections>
+                    </collectionView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="GnQ-tc-1iO" secondAttribute="trailing" id="3ri-hS-9hK"/>
+                    <constraint firstItem="GnQ-tc-1iO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="bsQ-7i-8ah"/>
+                    <constraint firstAttribute="bottom" secondItem="GnQ-tc-1iO" secondAttribute="bottom" id="dvn-xa-mGV"/>
+                    <constraint firstItem="GnQ-tc-1iO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hbM-RE-lc8"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="horizontalCollectionView" destination="GnQ-tc-1iO" id="Vhn-iT-3O6"/>
+            </connections>
+            <point key="canvasLocation" x="137.59999999999999" y="175.41229385307346"/>
         </tableViewCell>
     </objects>
 </document>
