--- a/DexSampleApp/View/Dex/DexCollectionViewCell.xib
+++ b/DexSampleApp/View/Dex/DexCollectionViewCell.xib
@@ -1,21 +1,53 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DexCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DexCollectionViewCell" id="gTV-IL-0wX" customClass="DexCollectionViewCell" customModule="DexSampleApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="147" height="146"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="147" height="146"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bQe-f6-W45">
+                        <rect key="frame" x="0.0" y="0.0" width="147" height="146"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGQ-aB-CKj">
+                        <rect key="frame" x="10" y="125" width="127" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="fMe-tA-c0d"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstItem="bQe-f6-W45" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="G6C-zj-NRs"/>
+                <constraint firstItem="sGQ-aB-CKj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Gbb-R9-IW7"/>
+                <constraint firstItem="bQe-f6-W45" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="TyR-2x-Cfk"/>
+                <constraint firstAttribute="trailing" secondItem="bQe-f6-W45" secondAttribute="trailing" id="ZhR-lj-22v"/>
+                <constraint firstAttribute="trailing" secondItem="sGQ-aB-CKj" secondAttribute="trailing" constant="10" id="aHs-dO-Y2g"/>
+                <constraint firstAttribute="bottom" secondItem="bQe-f6-W45" secondAttribute="bottom" id="eNV-lt-O3c"/>
+                <constraint firstAttribute="bottom" secondItem="sGQ-aB-CKj" secondAttribute="bottom" id="uLl-tj-pZz"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="147" height="146"/>
+            <connections>
+                <outlet property="imageViewDexBG" destination="bQe-f6-W45" id="lsR-LY-GuT"/>
+                <outlet property="lblTitle" destination="sGQ-aB-CKj" id="rZZ-Pd-XtJ"/>
+            </connections>
+            <point key="canvasLocation" x="215.19999999999999" y="172.71364317841082"/>
         </collectionViewCell>
     </objects>
 </document>
