--- a/DexSampleApp/View/Dex/DexTableViewCell.xib
+++ b/DexSampleApp/View/Dex/DexTableViewCell.xib
@@ -11,15 +11,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DexTableViewCell" id="KGk-i7-Jjw" customClass="DexTableViewCell" customModule="DexSampleApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DexTableViewCell" rowHeight="125" id="KGk-i7-Jjw" customClass="DexTableViewCell" customModule="DexSampleApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="124.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kHY-Ql-xXA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="124.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hh7-eu-67B">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <connections>
+                            <outlet property="dataSource" destination="KGk-i7-Jjw" id="YXw-6p-qcg"/>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="gzu-pO-Lev"/>
+                        </connections>
+                    </collectionView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="kHY-Ql-xXA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="VTU-Jf-fD4"/>
+                    <constraint firstItem="kHY-Ql-xXA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="erQ-aX-ueJ"/>
+                    <constraint firstAttribute="bottom" secondItem="kHY-Ql-xXA" secondAttribute="bottom" id="rMN-4j-Ppf"/>
+                    <constraint firstAttribute="trailing" secondItem="kHY-Ql-xXA" secondAttribute="trailing" id="vSZ-51-JZ4"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="137.59999999999999" y="112.44377811094454"/>
+            <connections>
+                <outlet property="horizontalCollectionView" destination="kHY-Ql-xXA" id="eRT-TF-Zrs"/>
+            </connections>
+            <point key="canvasLocation" x="137.59999999999999" y="148.87556221889056"/>
         </tableViewCell>
     </objects>
 </document>
