--- a/DexSampleApp/View/Requirement/RequirementCollectionViewCell.xib
+++ b/DexSampleApp/View/Requirement/RequirementCollectionViewCell.xib
@@ -1,21 +1,60 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RequirementCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RequirementCollectionViewCell" id="gTV-IL-0wX" customClass="RequirementCollectionViewCell" customModule="DexSampleApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="368" height="182"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="368" height="182"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ich-9X-LFh">
+                        <rect key="frame" x="0.0" y="0.0" width="368" height="182"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anywhere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="96X-4I-Uq1">
+                        <rect key="frame" x="10" y="160" width="348" height="17"/>
+                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
+                        <color key="textColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Required" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZER-8x-wOB">
+                        <rect key="frame" x="10" y="142" width="348" height="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                        <color key="textColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="ich-9X-LFh" secondAttribute="trailing" id="0B9-fx-JUB"/>
+                <constraint firstAttribute="bottom" secondItem="96X-4I-Uq1" secondAttribute="bottom" constant="5" id="5Ew-56-Iv0"/>
+                <constraint firstItem="ich-9X-LFh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="R90-vL-rdA"/>
+                <constraint firstAttribute="trailing" secondItem="ZER-8x-wOB" secondAttribute="trailing" constant="10" id="TGf-g4-Fd9"/>
+                <constraint firstItem="96X-4I-Uq1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="d2B-Vv-ZYM"/>
+                <constraint firstAttribute="bottom" secondItem="ich-9X-LFh" secondAttribute="bottom" id="exI-Z1-n46"/>
+                <constraint firstAttribute="trailing" secondItem="96X-4I-Uq1" secondAttribute="trailing" constant="10" id="fIc-Iv-MIy"/>
+                <constraint firstItem="96X-4I-Uq1" firstAttribute="top" secondItem="ZER-8x-wOB" secondAttribute="bottom" id="neG-IY-EZv"/>
+                <constraint firstItem="ZER-8x-wOB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="xLB-Mj-qv7"/>
+                <constraint firstItem="ich-9X-LFh" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="z46-yH-Nby"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="368" height="182"/>
+            <connections>
+                <outlet property="imageViewDexBG" destination="ich-9X-LFh" id="F9E-fn-wLk"/>
+                <outlet property="lblLocation" destination="96X-4I-Uq1" id="vTw-ae-aer"/>
+                <outlet property="lblRequirement" destination="ZER-8x-wOB" id="MAc-RD-gqe"/>
+            </connections>
+            <point key="canvasLocation" x="392" y="213.19340329835083"/>
         </collectionViewCell>
     </objects>
 </document>
