--- a/DexSampleApp/View/Requirement/RequirementTableViewCell.xib
+++ b/DexSampleApp/View/Requirement/RequirementTableViewCell.xib
@@ -17,8 +17,33 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="106.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="I40-Fk-TqW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="106.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0bm-RE-3gH">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <connections>
+                            <outlet property="dataSource" destination="KGk-i7-Jjw" id="lvv-ZW-Jn8"/>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="fFS-yo-ezY"/>
+                        </connections>
+                    </collectionView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="I40-Fk-TqW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KwM-ew-jDa"/>
+                    <constraint firstAttribute="bottom" secondItem="I40-Fk-TqW" secondAttribute="bottom" id="TWN-od-zhQ"/>
+                    <constraint firstAttribute="trailing" secondItem="I40-Fk-TqW" secondAttribute="trailing" id="VsZ-Hm-17H"/>
+                    <constraint firstItem="I40-Fk-TqW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="sSI-HG-H9s"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="horizontalCollectionView" destination="I40-Fk-TqW" id="39Z-aZ-aSY"/>
+            </connections>
             <point key="canvasLocation" x="64" y="104.7976011994003"/>
         </tableViewCell>
     </objects>
