--- a/DexSampleApp/View/User/UserCollectionViewCell.xib
+++ b/DexSampleApp/View/User/UserCollectionViewCell.xib
@@ -18,61 +18,22 @@
                 <rect key="frame" x="0.0" y="0.0" width="213" height="158"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b9j-br-BOC" customClass="RoundImageView" customModule="DexSampleApp" customModuleProvider="target">
-                        <rect key="frame" x="82.5" y="20" width="48" height="48.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="b9j-br-BOC" secondAttribute="height" multiplier="1:1" id="lec-lC-41J"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRQ-ZY-alI">
-                        <rect key="frame" x="10" y="78.5" width="193" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="c4U-VZ-zxq"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="KohinoorTelugu-Medium" family="Kohinoor Telugu" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMb-YU-fxC">
-                        <rect key="frame" x="10" y="99.5" width="193" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="2WX-TJ-S47"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👏 Claps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vo2-EB-3qg">
-                        <rect key="frame" x="10" y="125.5" width="193" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Ik8-dL-HxW"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kYL-8k-fZW" customClass="UserView" customModule="DexSampleApp" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="213" height="158"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="vo2-EB-3qg" secondAttribute="trailing" constant="10" id="0eX-JR-NjY"/>
-                <constraint firstItem="vo2-EB-3qg" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="42J-x3-44s"/>
-                <constraint firstItem="b9j-br-BOC" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="EP4-tY-WWk"/>
-                <constraint firstItem="MMb-YU-fxC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Gn3-JH-uin"/>
-                <constraint firstAttribute="trailing" secondItem="MMb-YU-fxC" secondAttribute="trailing" constant="10" id="KMf-4x-r42"/>
-                <constraint firstAttribute="trailing" secondItem="dRQ-ZY-alI" secondAttribute="trailing" constant="10" id="TOd-9u-rdC"/>
-                <constraint firstItem="b9j-br-BOC" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.3" constant="1" id="TdC-MU-VKW"/>
-                <constraint firstItem="dRQ-ZY-alI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Ur1-ob-hPz"/>
-                <constraint firstItem="vo2-EB-3qg" firstAttribute="top" secondItem="MMb-YU-fxC" secondAttribute="bottom" constant="5" id="bc2-Xi-Y33"/>
-                <constraint firstItem="MMb-YU-fxC" firstAttribute="top" secondItem="dRQ-ZY-alI" secondAttribute="bottom" id="dgq-jO-TXw"/>
-                <constraint firstItem="dRQ-ZY-alI" firstAttribute="top" secondItem="b9j-br-BOC" secondAttribute="bottom" constant="10" id="ur8-sy-JDP"/>
-                <constraint firstItem="b9j-br-BOC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="v8f-X8-40j"/>
+                <constraint firstItem="kYL-8k-fZW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="3Ey-nw-jdp"/>
+                <constraint firstItem="kYL-8k-fZW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="IpT-0x-GLn"/>
+                <constraint firstAttribute="bottom" secondItem="kYL-8k-fZW" secondAttribute="bottom" id="mBH-Pv-pLF"/>
+                <constraint firstAttribute="trailing" secondItem="kYL-8k-fZW" secondAttribute="trailing" id="wJP-Wu-Ohf"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="213" height="158"/>
             <connections>
-                <outlet property="imageViewUser" destination="b9j-br-BOC" id="mVp-Js-vrK"/>
-                <outlet property="lblClapsCount" destination="vo2-EB-3qg" id="HRL-tz-fmS"/>
-                <outlet property="lblFirstName" destination="dRQ-ZY-alI" id="jhj-u3-jQM"/>
-                <outlet property="lblLastName" destination="MMb-YU-fxC" id="lEI-cH-hwQ"/>
+                <outlet property="userView" destination="kYL-8k-fZW" id="owM-XV-MeP"/>
             </connections>
             <point key="canvasLocation" x="268" y="178.11094452773614"/>
         </collectionViewCell>
