--- a/DexSampleApp/View/Cell/Horizontal Cell/HorizontalTableViewCell.xib
+++ b/DexSampleApp/View/Cell/Horizontal Cell/HorizontalTableViewCell.xib
@@ -11,40 +11,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BannerTableViewCell" rowHeight="218" id="KGk-i7-Jjw" customClass="BannerTableViewCell" customModule="DexSampleApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="218"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="HorizontalTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="HorizontalTableViewCell" rowHeight="127" id="KGk-i7-Jjw" customClass="HorizontalTableViewCell" customModule="DexSampleApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="358" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="217.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="358" height="126.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bpe-kX-Zwx">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="217.5"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="E1N-bH-ovK">
+                        <rect key="frame" x="0.0" y="0.0" width="358" height="126.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RN8-p2-ZPT">
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Zar-i1-dNy">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <connections>
-                            <outlet property="dataSource" destination="KGk-i7-Jjw" id="bPf-tw-0TG"/>
-                            <outlet property="delegate" destination="KGk-i7-Jjw" id="Xi8-O8-2jq"/>
+                            <outlet property="dataSource" destination="KGk-i7-Jjw" id="2uh-Ve-AcX"/>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="PsJ-Qb-JEz"/>
                         </connections>
                     </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bpe-kX-Zwx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="7mb-0D-ldW"/>
-                    <constraint firstAttribute="bottom" secondItem="bpe-kX-Zwx" secondAttribute="bottom" id="Fug-CK-Txg"/>
-                    <constraint firstAttribute="trailing" secondItem="bpe-kX-Zwx" secondAttribute="trailing" id="f0S-f3-hM4"/>
-                    <constraint firstItem="bpe-kX-Zwx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mqr-rO-FCh"/>
+                    <constraint firstItem="E1N-bH-ovK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Buy-jC-hf3"/>
+                    <constraint firstAttribute="bottom" secondItem="E1N-bH-ovK" secondAttribute="bottom" id="Yjw-TE-q44"/>
+                    <constraint firstItem="E1N-bH-ovK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="kCR-w1-gFn"/>
+                    <constraint firstAttribute="trailing" secondItem="E1N-bH-ovK" secondAttribute="trailing" id="xbn-AX-0AB"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="horizontalCollectionView" destination="bpe-kX-Zwx" id="oen-8a-yCv"/>
+                <outlet property="horizontalCollectionView" destination="E1N-bH-ovK" id="Au7-Jv-RU6"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="232.08395802098951"/>
+            <point key="canvasLocation" x="168" y="175.86206896551727"/>
         </tableViewCell>
     </objects>
 </document>
